--- a/003. Caja flotante en CSS/index.html
+++ b/003. Caja flotante en CSS/index.html
@@ -11,22 +11,10 @@
 </head>
 <body>
 <div class="container">
-    <div class="itemOne">
-        <h1>Soy una cabecera</h1>
-    </div>
-<hr>
-    <div class="itemTwo">
         <p>Soy una cabecera</p>
-    </div>
-
-    <hr>
-    <div class="itemThree">
-        <button>Aceptar</button>
-    </div>
-    
-    <div class="itemFour">
-        <button>Cancelar</button>   
-    </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, placeat amet consectetur, impedit labore nesciunt ipsa sunt porro enim adipisci unde perspiciatis incidunt sequi odio culpa optio dolorem ab. Suscipit.</p>
+        <button class="btnA">Aceptar</button>
+        <button class="btnB">Cancelar</button>   
 </div>
 </body>
 </html>
